Fix refresh button, add dynamic description loaded from user.

--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
             <h2>name: unknwn || wtfremex</h2>
             <div>
               <h4>info:</h4>
-              <p>
-                Im a fucking retard i fucking hate everyone i talk to i leave
+              <p class="author-description">
+                <!-- Im a fucking retard i fucking hate everyone i talk to i leave
                 everything often and ignore everyone as much as i can and ignore
-                every request everyone makes to my address
+                every request everyone makes to my address -->
               </p>
             </div>
           </div>
