--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     />
     <link rel="manifest" href="./assets/favicon/site.webmanifest" />
 
+    <link rel="stylesheet" href="./styles/search-results.css" />
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./styles/dropdown-menu.css" />
     <link rel="stylesheet" href="./styles/header.css" />
@@ -47,20 +48,23 @@
       </div>
       <div class="header-mid">
         <input class="search-bar" type="text" placeholder="Search..." />
-        <svg
-          class="search-icon"
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        >
-          <circle cx="11" cy="11" r="8"></circle>
-          <path d="m21 21-4.3-4.3"></path>
-        </svg>
+        <button id="js-search-btn" class="search-button">
+          <svg
+            class="search-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <circle cx="11" cy="11" r="8"></circle>
+            <path d="m21 21-4.3-4.3"></path>
+          </svg>
+        </button>
+        <div id="js-result-box" class="search-result-box"></div>
       </div>
       <div class="header-right">
         <button class="open-link-bar">
@@ -80,7 +84,7 @@
           </svg>
         </button>
         <div class="dropdown-link-menu">
-          <button class="x-btn">
+          <button id="x-link" class="x-btn">
             <svg
               class="x-logo"
               viewBox="0 0 1200 1227"
@@ -93,7 +97,7 @@
               />
             </svg>
           </button>
-          <button class="tumblr-btn">
+          <button id="tumblr-link" class="tumblr-btn">
             <svg
               class="tumblr-logo"
               fill="#000000"
@@ -108,7 +112,7 @@
               />
             </svg>
           </button>
-          <button class="pixiv-btn">
+          <button id="pixiv-link" class="pixiv-btn">
             <svg
               class="pixiv-logo"
               fill="none"
