--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
       <section class="info-gallery-section">
         <div class="left-side-section">
-          <div class="about-section">
+          <div class="container about-section">
             <h2>name: unknwn || wtfremex</h2>
             <div>
               <h4>info:</h4>
@@ -149,7 +149,7 @@
               </p>
             </div>
           </div>
-          <div class="refresh-section">
+          <div class="container refresh-section">
             <h4>refresh images:</h4>
             <button class="refresh-button">
               <svg
@@ -185,6 +185,13 @@
               </svg>
             </button>
           </div>
+          <div class="container delete-IDB-section">
+            <p>
+              In case you visited this site, and the images are broken, please
+              first try this button.
+            </p>
+            <button id="js-delete-idb">Delete IDB and Refresh</button>
+          </div>
         </div>
         <div class="image-gallery">
           <!-- <img src="./images/art0.jpg" alt="image" />
@@ -194,6 +201,15 @@
           <img src="./images/art4.jpg" alt="image" />
           <img src="./images/art5.jpg" alt="image" />
           <img src="./images/art6.jpg" alt="image" /> -->
+        </div>
+      </section>
+      <section>
+        <div class="container input-field">
+          <form class="loginForm">
+            <input class="uname" type="text" placeholder="Username" required />
+            <input class="pw" type="text" placeholder="Password" required />
+            <button type="submit">Send to backend</button>
+          </form>
         </div>
       </section>
     </main>
